# deep-next

./: .dockerignore  .env.example  .env_example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  <all project files where 'Playground DI' is referenced>  CODEOWNERS  Makefile  NOTICE  README.md  hello_world.py  hello_world_play.py  langgraph.json  llm-config-example.yaml  llm-config.yaml  pyproject.toml
docs/: README.md  _config.yml  (+9 more)
libs/core/: pyproject.toml
libs/core/deep_next/core/: base_graph.py  base_node.py  common.py  config.py  entrypoint.py  graph.py  graph_hitl.py  graph_mode_action_plan_confirmation.py  io.py  parser.py  project_info.py
libs/core/deep_next/core/steps/action_plan/: __init__.py  action_plan.py  common.py  data_model.py  example.py  graph.py  path_tools.py
libs/core/deep_next/core/steps/action_plan/srf/: __init__.py  common.py  graph.py  list_dir.py
libs/core/deep_next/core/steps/action_plan/srs/: README.md  __init__.py  _agentless.py  common.py  common_agentless.py  graph.py  localize_function.py  localize_lines.py
libs/core/deep_next/core/steps/code_review/: README.md  __init__.py  common.py  graph.py  review_code.py  select_code.py
libs/core/deep_next/core/steps/code_review/model/: base.py  code_style.py  diff_consistency.py
libs/core/deep_next/core/steps/code_review/run_review/: code_reviewer.py  run_review.py
libs/core/deep_next/core/steps/gather_project_knowledge/: common.py  graph.py  project_descr.py  project_map.py
libs/core/deep_next/core/steps/gather_project_knowledge/project_description/: __init__.py  data_model.py  generate_project_description.py  generate_questions.py  graph.py
libs/core/deep_next/core/steps/implement/: __init__.py  acr.py  common.py  develop_patch.py  git_diff.py  graph.py  prompt_all_at_once_implemetation.py  prompt_single_file_implementation.py  utils.py
libs/core/deep_next/core/steps/implement/apply_patch/: apply_patch.py  common.py  lint_merge.py
libs/core/tests/: __init__.py  conftest.py  test_base_node.py  test_parser.py  test_run_deep_next.py  test_utils.py  utils.py
libs/core/tests/_resources/example_project/: README.md  pyproject.toml
libs/core/tests/_resources/example_project/src/: hello_world.py  logger.py  model.py
libs/core/tests/test_steps/test_action_plan/: test_path_tools.py
libs/core/tests/test_steps/test_action_plan/test_srf/: test_graph.py
libs/core/tests/test_steps/test_action_plan/test_srf/test_tools/: test_module_public_interface_lookup.py  test_read_imports.py  test_search.py
libs/core/tests/test_steps/test_gather_project_knowledge/: test_project_description.py  test_project_map.py
libs/core/tests/test_steps/test_implement/: test_acr.py  test_git_diff.py  test_parse_patches.py
(+77 files in other folders)
