[tool.poetry]
name = "deep_next_core"
version = "0.1.0"
description = "AI tool to support project managers to automatically solve simple project issues."
authors = []
packages = [{ include = "deep_next", from = "." }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
